[package]
name = "flat-manager"
version = "0.3.7"
authors = ["Alexander Larsson <alexander.larsson@gmail.com>"]
license = "MIT OR Apache-2.0"
default-run = "flat-manager"

[lib]
name = "flatmanager"
path = "src/lib.rs"

[dependencies]
env_logger = "0.5"

actix = "0.10"
actix-codec = "0.3.0"
actix-files = "0.5.0"
actix-http = "2.2.0"
actix-multipart = "0.3.0"
actix-net = "0.2.6"
actix-service = "1.0.6"
actix-web = "3.3.2"
actix-web-actors = "3.0.0"
argparse = "0.2.2"
askama = "0.7"
awc = "0.2"
base64 = "0.12"
byteorder = "1.3"
bytes = "0.4"
chrono = { version = "0.4.6", features = ["serde"] }
diesel = { version = "^1.3.0", features = ["postgres", "chrono", "serde_json", "r2d2"] }
diesel_migrations = { version = "^1.3.0" }
dotenv = "0.15"
failure = "0.1.2"
filetime = "0.2"
futures = "0.3.9"
futures-fs = "0.0.5"
futures-locks = "0.6.0"
hex = "0.4"
jsonwebtoken = "7"
libc = "0.2"
log = "0.4"
mpart-async = "0.2"
num_cpus = "1.0"
r2d2 = "0.8"
rand = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tempfile = "3.0"
time = "0.1"
tokio = { version = "1.0.1", features = ["process", "signal"] }
walkdir = "2"
